libcm4all-was (1.4) unstable; urgency=low

  * simple: fix assertion failure after receiving STOP

 --   

libcm4all-was (1.3) unstable; urgency=low

  * simple: add _input_remaining()
  * apreq: adapt to libapreq 2.10

 -- Max Kellermann <mk@cm4all.com>  Fri, 08 Apr 2016 07:24:27 -0000

libcm4all-was (1.2) unstable; urgency=low

  * simple: fix assertion failure after receiving STOP from web server
  * simple: don't send STOP if control channel is finalized
  * apreq: implement the query string parser
  * istub: implement close()

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Nov 2015 22:44:52 -0000

libcm4all-was (1.1) unstable; urgency=low

  * simple: more consistent STOP handler
  * simple: fix PREMATURE handler
  * simple: optimize discarding the request body
  * simple: fix was_simple_input_close() heisenbug

 -- Max Kellermann <mk@cm4all.com>  Mon, 02 Nov 2015 22:59:42 -0000

libcm4all-was (1.0) unstable; urgency=low

  * apreq: use libapreq2 forward-declarations
  * xios: reduce libcore header dependencies
  * simple: fix memory leak
  * simple: rename _input_read() to _read()
  * simple: _read() returns -1 on I/O error, -2 on other error
  * simple: add _output_poll()
  * simple: make file descriptors non-blocking
  * simple: check for control commands when I/O blocks
  * simple: support duplicate header names
  * simple: send PREMATURE packet if response body ends prematurely
  * apreq: don't use undefined parameter for apr_bucket_alloc()
  * apreq: fix multipart/form-data parser
  * convert to shared library
  * debian: Multi-Arch package

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 May 2015 08:44:10 -0000

libcm4all-was (0.7) unstable; urgency=low

  * debian/control: improved clang build-dependency
  * simple: add header and parameter iterator

 -- Max Kellermann <mk@cm4all.com>  Mon, 27 Apr 2015 11:18:07 -0000

libcm4all-was (0.6) unstable; urgency=low

  * debian: build with libcm4all-apreq2
